--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Smile Open",
     "description": "只想安静的在系统中打开一个文件",
     "publisher": "oneo",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "engines": {
         "vscode": "^1.0.0"
     },
@@ -28,6 +28,18 @@
         ],
         "menus": {
             "explorer/context": [
+                {
+                    "command": "extension.smileopen",
+                    "group": "navigation@0"
+                }
+            ],
+            "editor/title/context": [
+                {
+                    "command": "extension.smileopen",
+                    "group": "navigation@0"
+                }
+            ],
+            "editor/context": [
                 {
                     "command": "extension.smileopen",
                     "group": "navigation@0"
